--- a/style/main.css
+++ b/style/main.css
@@ -89,6 +89,12 @@ h1.title {
     -moz-animation-fill-mode: both;
     animation-fill-mode: both; }
 
+.score-container:after {
+  content: "Score"; }
+
+.best-container:after {
+  content: "Best"; }
+
 .encourage-message {
   position: relative;
   display: inline-block;
@@ -117,12 +123,6 @@ h1.title {
     -webkit-animation-fill-mode: both;
     -moz-animation-fill-mode: both;
     animation-fill-mode: both; }
-
-.score-container:after {
-  content: "Score"; }
-
-.best-container:after {
-  content: "Best"; }
 
 p {
   margin-top: 0;
@@ -202,10 +202,10 @@ hr {
     -moz-animation-fill-mode: both;
     animation-fill-mode: both; }
     .game-container .game-message p {
-      font-size: 60px;
+      font-size: 45px;
       font-weight: bold;
-      height: 60px;
-      line-height: 60px;
+      height: 45px;
+      line-height: 45px;
       margin-top: 222px; }
     .game-container .game-message .lower {
       display: block;
@@ -222,12 +222,22 @@ hr {
       margin-left: 9px; }
       .game-container .game-message a.keep-playing-button {
         display: none; }
+      .game-container .game-message a.continue-button {
+        display: none; }
     .game-container .game-message.game-won {
       background: rgba(237, 194, 46, 0.5);
       color: #f9f6f2; }
       .game-container .game-message.game-won a.keep-playing-button {
         display: inline-block; }
-    .game-container .game-message.game-won, .game-container .game-message.game-over {
+    .game-container .game-message.gam-info {
+      background: rgba(238, 228, 218, 0.5);
+      color: #f9f6f2; }
+      .game-container .game-message.game-info p {
+        margin-top: 20px;
+        color: #000000; }
+      .game-container .game-message.game-info a.continue-button {
+        display: inline-block; }
+    .game-container .game-message.game-won, .game-container .game-message.game-over, .game-container .game-message.game-info  {
       display: block; }
 
 .grid-container {
@@ -340,87 +350,87 @@ hr {
     text-align: right;
     font-weight: bold;
     z-index: 10;
-    font-size: 25px; }
+    font-size: 100%; }
   .tile.tile-2 .tile-inner {
     color: #000000;
-    background: url('../tile-sets/logo/logo2.jpg');
+    background: url('../tile-sets/logo/logo2.png');
     background-size: cover;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); }
   .tile.tile-4 .tile-inner {
     color: #0000ff;
-    background: url('../tile-sets/logo/logo4.jpg');
+    background: url('../tile-sets/logo/logo4.png');
     background-size: cover;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); }
   .tile.tile-8 .tile-inner {
-    background: url('../tile-sets/logo/logo8.jpg');
+    background: url('../tile-sets/logo/logo8.png');
     background-size: cover;
     color: #008000; }
   .tile.tile-16 .tile-inner {
-    background: url('../tile-sets/logo/logo16.jpg');
+    background: url('../tile-sets/logo/logo16.png');
     background-size: cover;
     color: #800080; }
   .tile.tile-32 .tile-inner {
-    background: url('../tile-sets/logo/logo32.jpg');
+    background: url('../tile-sets/logo/logo32.png');
     background-size: cover;
     color: #808080; }
   .tile.tile-64 .tile-inner {
-    background: url('../tile-sets/logo/logo64.jpg');
+    background: url('../tile-sets/logo/logo64.png');
     background-size: cover;
     color: #a52a2a; }
   .tile.tile-128 .tile-inner {
-    background: url('../tile-sets/logo/logo128.jpg');
+    background: url('../tile-sets/logo/logo128.png');
     background-size: cover;
     color: #ff0000;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.2381), inset 0 0 0 1px rgba(255, 255, 255, 0.14286);
-    font-size: 25px; }
+    font-size: 100%; }
     @media screen and (max-width: 520px) {
       .tile.tile-128 .tile-inner {
-        font-size: 20px; } }
+        font-size: 100%; } }
   .tile.tile-256 .tile-inner {
-    background: url('../tile-sets/logo/logo256.jpg');
+    background: url('../tile-sets/logo/logo256.png');
     background-size: cover;
     color: #ffa500;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.31746), inset 0 0 0 1px rgba(255, 255, 255, 0.19048);
-    font-size: 20px; }
+    font-size: 100%; }
     @media screen and (max-width: 520px) {
       .tile.tile-256 .tile-inner {
-        font-size: 25px; } }
+        font-size: 100%; } }
   .tile.tile-512 .tile-inner {
-    background: url('../tile-sets/logo/logo512.jpg');
+    background: url('../tile-sets/logo/logo512.png');
     background-size: cover;
     color: #ffc0cb;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.39683), inset 0 0 0 1px rgba(255, 255, 255, 0.2381);
-    font-size: 20px; }
+    font-size: 100%; }
     @media screen and (max-width: 520px) {
       .tile.tile-512 .tile-inner {
-        font-size: 25px; } }
+        font-size: 100%; } }
   .tile.tile-1024 .tile-inner {
-    background: url('../tile-sets/logo/logo1024.jpg');
+    background: url('../tile-sets/logo/logo1024.png');
     background-size: cover;
     color: #ffff00;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.47619), inset 0 0 0 1px rgba(255, 255, 255, 0.28571);
-    font-size: 15px; }
+    font-size: 100%; }
     @media screen and (max-width: 520px) {
       .tile.tile-1024 .tile-inner {
-        font-size: 15px; } }
+        font-size: 100%; } }
   .tile.tile-2048 .tile-inner {
-    background: url('../tile-sets/logo/logo2048.jpg');
+    background: url('../tile-sets/logo/logo2048.png');
     background-size: cover;
     color: #ffffff;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.55556), inset 0 0 0 1px rgba(255, 255, 255, 0.33333);
-    font-size: 15px; }
+    font-size: 100%; }
     @media screen and (max-width: 520px) {
       .tile.tile-2048 .tile-inner {
-        font-size: 15px; } }
+        font-size: 100%; } }
   .tile.tile-super .tile-inner {
     color: #f9f6f2;
     background: #3c3a32;
-    background: url('../tile-sets/logo/logoSuper.jpg');
+    background: url('../tile-sets/logo/logoSuper.png');
     background-size: cover;
-    font-size: 30px; }
+    font-size: 100%; }
     @media screen and (max-width: 520px) {
       .tile.tile-super .tile-inner {
-        font-size: 10px; } }
+        font-size: 100%; } }
 
 @-webkit-keyframes appear {
   0% {
@@ -525,10 +535,18 @@ hr {
   display: block;
   clear: both; }
 
-.game-intro {
-  float: left;
+.info-button {
+  display: inline-block;
+  background: #8f7a66;
+  border-radius: 3px;
+  padding: 0 20px;
+  text-decoration: none;
+  color: #f9f6f2;
+  height: 40px;
   line-height: 42px;
-  margin-bottom: 0; }
+  display: block;
+  text-align: center;
+  float: right; }
 
 .restart-button {
   display: inline-block;
@@ -570,11 +588,12 @@ hr {
   .heading {
     margin-bottom: 10px; }
 
-  .game-intro {
-    width: 55%;
+  .info-button {
+    width: 42%;
+    padding: 0;
     display: block;
     box-sizing: border-box;
-    line-height: 1.65; }
+    margin-top: 2px; }
 
   .restart-button {
     width: 42%;
@@ -619,10 +638,10 @@ hr {
       -moz-animation-fill-mode: both;
       animation-fill-mode: both; }
       .game-container .game-message p {
-        font-size: 60px;
+        font-size: 45px;
         font-weight: bold;
-        height: 60px;
-        line-height: 60px;
+        height: 45px;
+        line-height: 45px;
         margin-top: 222px; }
       .game-container .game-message .lower {
         display: block;
@@ -639,12 +658,22 @@ hr {
         margin-left: 9px; }
         .game-container .game-message a.keep-playing-button {
           display: none; }
+        .game-container .game-message a.continue-button {
+          display: none; }
       .game-container .game-message.game-won {
         background: rgba(237, 194, 46, 0.5);
         color: #f9f6f2; }
         .game-container .game-message.game-won a.keep-playing-button {
           display: inline-block; }
-      .game-container .game-message.game-won, .game-container .game-message.game-over {
+      .game-container .game-message.game-info {
+        background: rgba(238, 228, 218, 0.5);
+        color: #f9f6f2; }
+        .game-container .game-message.game-info p {
+          margin-top: 20px;
+          color: #000000; }
+        .game-container .game-message.game-info a.continue-button {
+          display: inline-block; }
+      .game-container .game-message.game-won, .game-container .game-message.game-over, .game-container .game-message.game-info {
         display: block; }
 
   .grid-container {
