--- a/style/about.css
+++ b/style/about.css
@@ -4,12 +4,12 @@
   right: 0;
   bottom: 0;
   left: 0;
-  width: 460px;
+  width: 500px;
   height: 250px;
   border: 1px solid #cccccc;
   background-color: #eeeeee;
   border-radius: 4px;
-  margin: 4px 0 20px 20px;
+  margin: 4px 0 20px 0;
   white-space: nowrap;
   overflow: hidden;
   display: none;
@@ -84,3 +84,45 @@
   color: #eeeeee;
   text-shadow: 0 0px 4px rgba(0, 0, 0, 0.8);
 }
+
+@media screen and (max-width: 520px) {
+#about-box {
+  width: 280px;
+  height: 180px;
+  margin: 0 0 10px 0;
+}
+
+#about-box div {
+  width: 100%;
+}
+
+#about-box a.btn {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  margin-left: -58px;
+  margin-top: -18px;
+  cursor: pointer;
+}
+
+#credits {
+  width: 100%;
+  font-size: 10px;
+}
+
+#instructions {
+  font-size: 10px;
+}
+
+#achievements {
+  font-size: 10px;
+  width: 120px;
+}
+
+#challenge {
+  width: 120px;
+}
+
+#challenge div {
+  height: 90px;
+}}
