--- a/style/main.css
+++ b/style/main.css
@@ -602,6 +602,16 @@ hr {
   text-align: center;
   float: right; }
 
+.like-button {
+  display: inline-block;
+  border-radius: 3px;
+  text-decoration: none;
+  height: 40px;
+  line-height: 42px;
+  display: block;
+  text-align: center;
+  float: right; }
+
 .game-explanation {
   margin-top: 50px; }
 
@@ -630,21 +640,28 @@ hr {
     margin-bottom: 10px; }
 
   .info-button {
-    width: 33%;
+    width: 30%;
     padding: 0;
     display: block;
     box-sizing: border-box;
     margin-top: 2px; }
 
   .restart-button {
-    width: 33%;
+    width: 30%;
     padding: 0;
     display: block;
     box-sizing: border-box;
     margin-top: 2px; }
 
   .share-button {
-    width: 33%;
+    width: 20%;
+    padding: 0;
+    display: block;
+    box-sizing: border-box;
+    margin-top: 2px; }
+
+  .like-button {
+    width: 20%;
     padding: 0;
     display: block;
     box-sizing: border-box;
