--- a/style/main.css
+++ b/style/main.css
@@ -570,10 +570,10 @@ hr {
   display: inline-block;
   background: #8f7a66;
   border-radius: 3px;
-  padding: 0 20px;
+  padding: 0 5px;
   text-decoration: none;
   color: #f9f6f2;
-  height: 40px;
+  height: 50px;
   line-height: 42px;
   display: block;
   text-align: center;
@@ -583,10 +583,10 @@ hr {
   display: inline-block;
   background: #8f7a66;
   border-radius: 3px;
-  padding: 0 20px;
+  padding: 0 5px;
   text-decoration: none;
   color: #f9f6f2;
-  height: 40px;
+  height: 50px;
   line-height: 42px;
   display: block;
   text-align: center;
@@ -596,16 +596,16 @@ hr {
   display: inline-block;
   border-radius: 3px;
   text-decoration: none;
-  height: 40px;
+  height: 50px;
   line-height: 42px;
   text-align: center;
-  float: right; }
+  float: left; }
 
 .like-button {
   display: inline-block;
   border-radius: 3px;
   text-decoration: none;
-  height: 40px;
+  height: 50px;
   line-height: 42px;
   text-align: center;
   float: left; }
