--- a/style/main.css
+++ b/style/main.css
@@ -566,6 +566,28 @@ hr {
   display: block;
   clear: both; }
 
+.like-button {
+  display: inline-block;
+  border-radius: 3px;
+  text-decoration: none;
+  height: 40px;
+  line-height: 42px;
+  text-align: center;
+  float: left; }
+
+.info-button {
+  display: inline-block;
+  background: #8f7a66;
+  border-radius: 3px;
+  padding: 0 20px;
+  text-decoration: none;
+  color: #f9f6f2;
+  height: 40px;
+  line-height: 42px;
+  display: block;
+  text-align: center;
+  float: right; }
+
 .donate-button {
   display: inline-block;
   border-radius: 3px;
@@ -575,7 +597,7 @@ hr {
   text-align: center;
   float: right; }
 
-.info-button {
+.restart-button {
   display: inline-block;
   background: #8f7a66;
   border-radius: 3px;
@@ -595,29 +617,7 @@ hr {
   height: 40px;
   line-height: 42px;
   text-align: center;
-  float: left; }
-
-.restart-button {
-  display: inline-block;
-  background: #8f7a66;
-  border-radius: 3px;
-  padding: 0 20px;
-  text-decoration: none;
-  color: #f9f6f2;
-  height: 40px;
-  line-height: 42px;
-  display: block;
-  text-align: center;
   float: right; }
-
-.like-button {
-  display: inline-block;
-  border-radius: 3px;
-  text-decoration: none;
-  height: 40px;
-  line-height: 42px;
-  text-align: center;
-  float: left; }
 
 .game-explanation {
   margin-top: 50px; }
@@ -646,7 +646,7 @@ hr {
   .heading {
     margin-bottom: 10px; }
 
-  .donate-button {
+  .like-button {
     width: 20%;
     padding: 0;
     display: block;
@@ -660,7 +660,7 @@ hr {
     box-sizing: border-box;
     margin-top: 2px; }
 
-  .share-button {
+  .donate-button {
     width: 20%;
     padding: 0;
     display: block;
@@ -674,7 +674,7 @@ hr {
     box-sizing: border-box;
     margin-top: 2px; }
 
-  .like-button {
+  .share-button {
     width: 20%;
     padding: 0;
     display: block;
